syntax= "proto3";

package product;
option go_package="/product";

// import "google/protobuf/timestamp.proto";

service ProductService {
  rpc AddProduct(AddProductRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (ProductResponse);
  rpc GetProductsByUser(GetProductsByUserRequest) returns (ProductsList);
}

message AddProductRequest {
  int32 category_id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  string date=5;

}

message UpdateProductRequest {
  int32 product_id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message DeleteProductRequest {
  int32 product_id = 1;
}

message GetProductsByUserRequest {
}

message ProductResponse {
  string message = 1;
}


message Product {
  string product_name = 1;
  float quantity = 2;
  float amount = 3;
  string date=4;
  string category = 5;
}
message ProductsList{
  repeated Product products=1;
}


